--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>LearnAngularRails</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link href="xeditable.min.css" rel="stylesheet">
+  <script src="xeditable.min.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
